[Sync] Notify observers when IsSyncRequested goes from true to false.

BUG=618453

Review-Url: https://codereview.chromium.org/2047383004
Cr-Commit-Position: refs/heads/master@{#398950}

Former-commit-id: af4a59689fe719e5bf944a74cfdc7dcdcf147e8f